# CSerialPort

./: CMakeLists.txt
examples/CommMFC/: CommMFC.cpp  CommMFC.h  CommMFCDlg.cpp  CommMFCDlg.h  stdafx.cpp
examples/CommNoGui/: CSerialPortDemoNoGui.cpp
src/: SerialPortWinBase.cpp
test/: CMakeLists.txt
test/crc/: CMakeLists.txt  crc16.cpp  crc16.h  crtc16_test.cpp
